updating caption padding for image-grid component to prevent clipped text on tablet sizes

--- a/src/components/image-grid/_image-grid.scss
+++ b/src/components/image-grid/_image-grid.scss
@@ -44,4 +44,10 @@
     flex: 0 1 auto;
     width: 100%;
   }
+  @include media-breakpoint-up(lg) {
+    padding-right: rem(30);
+  }
+  @include media-breakpoint-up(xl) {
+    padding-right: 0;
+  }
 }
